Upgrade java.net to android 13
PiperOrigin-RevId: 533732558